--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="action_settings">Settings</string>
     <string name="phone_login">手机登录</string>
     <string name="phone_reg">注册帐号</string>
+    <string name="animation1">自定义动画框架2</string>
 </resources>
